# DPorts

./: COPYRIGHT  GIDs  MOVED  Makefile  README  README.md  UIDs  UPDATING
Keywords/: fc.ucl  fc.yaml  fcfontsdir.ucl  fcfontsdir.yaml  fontsdir.ucl  fontsdir.yaml  info.ucl  info.yaml  kld.ucl  pkg_install.awk  rmtry.ucl  sample.ucl  sample.yaml  shell.ucl  xmlcatmgr.ucl
Mk/: Uses_fortran.mk.diff  bsd.apache.mk  bsd.autotools.mk  bsd.cmake.mk  bsd.commands.mk  bsd.cran.mk  bsd.database.mk  bsd.default-versions.mk  bsd.destdir.mk  bsd.df.gcc.mk  bsd.drupal.mk  bsd.efl.mk  bsd.emacs.mk  bsd.fpc.mk  bsd.gcc.mk  bsd.gecko.mk  bsd.gnome.mk  bsd.gnustep.mk  bsd.gstreamer.mk  bsd.interpreter.mk  bsd.java.mk  bsd.kde.mk  bsd.kde4.mk  bsd.ldap.mk  bsd.licenses.db.mk  bsd.licenses.mk  bsd.linux-apps.mk  bsd.linux-rpm.mk  bsd.local.mk  bsd.lua.mk  bsd.mail.mk  bsd.mate.mk  bsd.ncurses.mk  bsd.npapi.mk  bsd.ocaml.mk  bsd.octave.mk  bsd.openssl.mk  bsd.options.desc.mk  bsd.options.mk  bsd.pbi.mk  (+23 more)
Mk/Features/: lto.mk
Mk/Scripts/: check-stagedir.sh  check_leftovers.sh  dialog4ports.sh  do-fetch.sh  do-patch.sh  pkgencode.awk  qa.sh  relative_link.sh
Mk/Uses/: ada.mk  bison.mk  cargo-extra.mk  cargo.mk  charsetfix.mk  cmake.mk  compiler.mk  cran.mk  desktop-file-utils.mk  desthack.mk  display.mk  dos2unix.mk  fam.mk  fmake.mk  fortran.mk  fpc.mk  fuse.mk  gem.mk  gettext.mk  gmake.mk  gnustep.mk  gstreamer.mk  iconv.mk  imake.mk  kde.mk  kmod.mk  lazarus.mk  lha.mk  libedit.mk  libtool.mk  linux.mk  lua.mk  meson.mk  motif.mk  ncurses.mk  ninja.mk  npapi.mk  objc.mk  openal.mk  pathfix.mk  (+24 more)
Templates/: BSD.local.dist  config.guess  config.site  config.sub
Tools/: make_index  make_readmes
arabic/: Makefile.inc
chinese/: Makefile.inc
devel/electron18/dragonfly/: patch-all  patch-electron_shell_browser_relauncher__linux.cc  patch-electron_shell_common_gin__converters_std__converter.h  patch-src_tools_v8__context__snapshot_BUILD.gn
devel/hs-QuickCheck/dragonfly/: patch-QuickCheck.cabal
devel/hs-bloomfilter/dragonfly/: patch-bloomfilter.cabal
devel/hs-gtk2hs-buildtools/dragonfly/: patch-gtk2hs-buildtools.cabal  patch-src_Gtk2HsSetup.hs
devel/hs-hslua/dragonfly/: patch-hslua.cabal
devel/hs-mueval/dragonfly/: patch-mueval.cabal
devel/hs-ncurses/dragonfly/: patch-ncurses.cabal
devel/hs-text/dragonfly/: patch-text.cabal
french/: Makefile.inc
german/: Makefile.inc
graphics/hs-JuicyPixels/dragonfly/: patch-JuicyPixels.cabal
graphics/hs-dia-functions/dragonfly/: patch-dia-functions.cabal
hebrew/: Makefile.inc
hungarian/: Makefile.inc
japanese/: Makefile.inc
korean/: Makefile.inc
lang/ghc/dragonfly/: bootstrap-configure  extras-bootstrap-settings  nopatch-ghc-7.4.2-boot_rts_package.conf.in  patch-aclocal.m4  patch-compiler_utils_Platform.hs  patch-hadrian_src_Oracles_Setting.hs  patch-hadrian_src_Settings_Packages.hs  patch-libraries_Cabal_Cabal_Distribution_Simple_GHC.hs  patch-libraries_Cabal_Cabal_src_Distribution_Simple_GHC.hs  patch-libraries_base_base.cabal  patch-libraries_ghc-boot_GHC_BaseDir.hs  patch-libraries_terminfo_configure  patch-libraries_text_cbits_measure__off.c  patch-libraries_text_text.cabal  patch-m4_fptools__set__haskell__platform__vars.m4  patch-rts_Linker.c  patch-rts_PosixSource.h  patch-rts_include_Rts.h  patch-rts_posix_OSThreads.c  patch-rts_sm_HeapAlloc.h  patch-rts_sm_Storage.h  patch-rules_build-package-data.mk
lang/ghc810/dragonfly/: patch-libraries_base_base.cabal  patch-rts_linker_Elf.c
lang/v8/dragonfly/: patch-build_build__config.h  patch-build_common.gypi  patch-build_config_gcc_BUILD.gn  patch-build_gyp__v8  patch-include_v8config.h  patch-src_base_platform_platform-freebsd.cc  patch-third__party_icu_source_common_unicode_platform.h  patch-third__party_zlib_contrib_minizip_ioapi.h  patch-tools_testrunner_local_utils.py  patch-tools_utils.py
math/hs-mwc-random/dragonfly/: patch-mwc-random.cabal
net/: Makefile
net/hs-simple-sendfile/dragonfly/: patch-simple-sendfile.cabal
polish/: Makefile.inc
portuguese/: Makefile.inc
russian/: Makefile.inc
security/hs-crypto-random/dragonfly/: patch-crypto-random.cabal
security/hs-cryptonite/dragonfly/: patch-cryptonite.cabal
ukrainian/: Makefile.inc
vietnamese/: Makefile.inc
www/chromium/dragonfly/: extra-patch_release_5_6  patch-all  patch-base_BUILD.gn  patch-base__debug__stack_trace_posix.cc  patch-base_base__export.h  patch-base_base__paths__posix.cc  patch-base_debug_debugger__posix.cc  patch-base_process_process__handle__freebsd.cc  patch-build_build__config.h  patch-build_config_compiler_BUILD.gn  patch-build_config_linux_pkg-config.py  patch-build_config_ui.gni  patch-build_toolchain_gcc__toolchain.gni  patch-cc_raster_texture__compressor.h  patch-chrome_browser_BUILD.gn  patch-chrome_browser_browser__resources.grd  patch-chrome_browser_net_bit__stream__reader.cc  patch-chrome_browser_net_packed__ct__ev__whitelist.cc  patch-chrome_browser_ui_BUILD.gn  patch-chrome_browser_ui_app__list_speech__recognizer.cc  patch-chrome_browser_ui_views_frame_browser__desktop__window__tree__host__x11.cc  patch-chrome_chrome__browser.gypi  patch-components_packed__ct__ev__whitelist_bit__stream__reader.cc  patch-components_packed__ct__ev__whitelist_packed__ct__ev__whitelist.cc  patch-content_browser_geolocation_wifi__data__provider__freebsd.cc  patch-content_common_gpu_media_fake__video__decode__accelerator.cc  patch-device_usb_usb__device__handle__impl.cc  patch-extensions_browser_BUILD.gn  patch-extensions_browser_api_device__permissions__manager.cc  patch-media_gpu_fake__video__decode__accelerator.cc  patch-net_udp_udp__socket__libevent.cc  patch-net_udp_udp__socket__posix.cc  patch-no_dbus_powerblock  patch-no_dbus_wallet  patch-pdf_chunk__stream.cc  patch-third__party_WebKit_Source_core_dom_NodeFilter.h  patch-third__party_WebKit_Source_wtf_ThreadingPthreads.cpp  patch-third__party_cld__2_src_internal_cld__generated__cjk__uni__prop__80.cc  patch-third__party_ffmpeg_BUILD.gn  patch-third__party_ffmpeg_ffmpeg.gyp  (+20 more)
www/hs-warp/dragonfly/: patch-warp.cabal
(+39176 files in other folders)
