--- tools/v8_context_snapshot/BUILD.gn.orig	2023-02-05 16:55:45 UTC
+++ tools/v8_context_snapshot/BUILD.gn
@@ -114,6 +114,7 @@ if (use_v8_context_snapshot) {
       configs += [
         "//v8:external_startup_data",
         ":disable_icf",
+        ":enable_origin",
         "//electron/build/config:build_time_executable",
       ]
     }
@@ -135,4 +136,10 @@ if (use_v8_context_snapshot) {
       ldflags = [ "-Wl,--icf=none" ]
     }
   }
+
+  config("enable_origin") {
+    visibility = [ ":*" ]  # Only targets in this file can depend on this.
+    ldflags = [ "-Wl,-z,origin" ]
+  }
+
 }
