--- bloomfilter.cabal.orig	2015-05-19 03:14:07 UTC
+++ bloomfilter.cabal
@@ -16,6 +16,7 @@ extra-source-files: README.markdown cbit
                  examples/Makefile examples/SpellChecker.hs examples/Words.hs
 
 library
+  extra-libraries: m
   build-depends:
     array,
     base       >= 4.4 && < 5,
