--- gtk2hs-buildtools.cabal.orig	2017-01-14 09:17:54 UTC
+++ gtk2hs-buildtools.cabal
@@ -126,16 +126,19 @@ Executable gtk2hsTypeGen
         main-is:        gtk2hsTypeGenMain.hs
         hs-source-dirs: exe
         build-depends:  base, gtk2hs-buildtools
+        extra-libraries: m
         default-language: Haskell98
 
 Executable gtk2hsHookGenerator
         main-is:        gtk2hsHookGeneratorMain.hs
         hs-source-dirs: exe
         build-depends:  base, gtk2hs-buildtools
+        extra-libraries: m
         default-language: Haskell98
 
 Executable gtk2hsC2hs
         main-is:        gtk2hsC2hsMain.hs
         hs-source-dirs: exe
         build-depends:  base, gtk2hs-buildtools
+        extra-libraries: m
         default-language: Haskell98
