--- hslua.cabal.orig	2017-03-23 22:23:17 UTC
+++ hslua.cabal
@@ -42,6 +42,7 @@ flag luajit
   default:              False
 
 library
+  extra-libraries:      m
   build-depends:        base       >= 4.7    && < 5,
                         bytestring >= 0.10.2 && < 0.11
   exposed-modules:      Scripting.Lua, Scripting.Lua.Raw
