--- simple-sendfile.cabal.orig	2014-06-23 03:54:39.000000000 +0000
+++ simple-sendfile.cabal
@@ -26,7 +26,7 @@ Library
                       , bytestring
                       , resourcet
   -- NetBSD and OpenBSD don't have sendfile
-  if os(freebsd) && flag(allow-bsd)
+  if os(dragonfly) && flag(allow-bsd)
     CPP-Options:        -DOS_BSD
     Other-Modules:      Network.Sendfile.BSD
                         Network.Sendfile.IOVec
