--- base/BUILD.gn.intermediate	2016-11-29 18:50:23.000000000 +0200
+++ base/BUILD.gn
@@ -1043,7 +1043,7 @@ component("base") {
   ]
 
   # Needed for <atomic> if using newer C++ library than sysroot
-  if (!use_sysroot && (is_android || is_linux)) {
+  if (!use_sysroot && (is_android || is_linux) && !is_bsd) {
     libs = [ "atomic" ]
   }
 
