--- build/config/compiler/BUILD.gn.intermediate	2016-11-29 19:18:26.000000000 +0200
+++ build/config/compiler/BUILD.gn
@@ -186,6 +186,8 @@ config("compiler") {
       } else {
         cflags += [ "-fstack-protector" ]
       }
+    } else if (is_bsd) {
+      cflags += [ "-D__FreeBSD__=9", "-isystem", "/usr/local/include" ] # emulate clang
     } else if (is_posix && !is_chromeos && !is_nacl) {
       # TODO(phajdan.jr): Use -fstack-protector-strong when our gcc supports it.
       # See also https://crbug.com/533294
