--- build/config/ui.gni.intermediate	2016-12-01 14:28:35.000000000 +0200
+++ build/config/ui.gni
@@ -86,7 +86,7 @@ if ((is_linux || is_bsd) && !use_ozone)
 }
 
 # Whether to use atk, the Accessibility ToolKit library
-use_atk = is_desktop_linux && use_x11
+use_atk = is_desktop_linux && use_x11 && use_glib
 
 use_clipboard_aurax11 =
     (is_desktop_linux && use_aura && use_x11) || enable_clipboard_aurax11
