--- chrome/browser/BUILD.gn.intermediate	2017-01-26 11:19:04.000000000 +0200
+++ chrome/browser/BUILD.gn
@@ -3459,7 +3459,7 @@ split_static_library("browser") {
     ]
   }
 
-  if (is_desktop_linux) {
+  if (is_desktop_linux || is_bsd) {
     # Desktop linux, doesn't count ChromeOS.
     sources += [
       "first_run/upgrade_util.cc",
@@ -3486,6 +3486,12 @@ split_static_library("browser") {
       defines += [ "USE_LIBSECRET" ]
       deps += [ "//third_party/libsecret" ]
     }
+    if (is_bsd && !use_dbus) {
+      sources -= [
+        "password_manager/native_backend_kwallet_x.cc",
+        "password_manager/native_backend_kwallet_x.h",
+      ]
+    }
   }
 
   if (android_java_ui) {
