--- chrome/browser/ui/BUILD.gn.intermediate	2017-01-26 11:24:39.000000000 +0200
+++ chrome/browser/ui/BUILD.gn
@@ -1895,14 +1895,14 @@ split_static_library("ui") {
   if (use_gio) {
     deps += [ "//build/linux/libgio" ]
   }
-  if (use_aura && !use_ozone && is_desktop_linux) {
+  if (use_aura && !use_ozone && (is_desktop_linux || is_bsd)) {
     deps += [
       # gtk2 is the only component that can interact with gtk2 in our new
       # world.
       "//chrome/browser/ui/libgtk2ui",
     ]
   }
-  if (is_win || is_mac || is_desktop_linux) {
+  if (is_win || is_mac || is_desktop_linux || is_bsd) {
     sources += [
       "avatar_button_error_controller.cc",
       "avatar_button_error_controller.h",
@@ -2988,7 +2988,7 @@ split_static_library("ui") {
       ]
     }
   }
-  if (is_desktop_linux) {
+  if (is_desktop_linux || is_bsd) {
     sources += [
       "input_method/input_method_engine.cc",
       "input_method/input_method_engine.h",
@@ -3023,6 +3023,15 @@ split_static_library("ui") {
         "views/javascript_app_modal_dialog_views_x11.h",
       ]
     }
+
+    if (is_bsd && !use_dbus) {
+      defines += [ "GLOBAL_MENUBAR_DBUS_DUMMY" ]
+      sources -= [
+        "views/frame/global_menu_bar_registrar_x11.cc",
+        "views/frame/global_menu_bar_x11.cc",
+      ]
+    }
+
   }
   if (is_linux || is_bsd) {  # Both desktop Linux and ChromeOS.
     sources += [
