--- extensions/browser/BUILD.gn.intermediate	2016-11-30 00:04:53.000000000 +0200
+++ extensions/browser/BUILD.gn
@@ -88,12 +88,13 @@ source_set("browser") {
       if (is_linux || is_bsd) {
         if (use_dbus) {
           deps += [ "//dbus" ]
-        }
+        
         linux_sources = rebase_path(
                 extensions_gypi_values.extensions_browser_sources_linux_nonchromeos,
                 ".",
                 "//extensions")
         sources += linux_sources
+       }
       } else {
         if (is_win || is_mac) {
           deps += [ "//components/wifi" ]
