--- third_party/ffmpeg/BUILD.gn.intermediate	2016-11-29 20:34:07.000000000 +0200
+++ third_party/ffmpeg/BUILD.gn
@@ -146,8 +146,6 @@ target(link_target_type, "ffmpeg_interna
   ]
   defines = [
     "HAVE_AV_CONFIG_H",
-    "_POSIX_C_SOURCE=200112",
-    "_XOPEN_SOURCE=600",
     "PIC",
     # Disable deprecated features that generate spammy warnings.
     # ffmpeg.gyp & media/ffmpeg/ffmpeg_common.h must be kept in sync.
