--- third_party/libjingle/BUILD.gn.orig	2016-11-10 22:02:28.000000000 +0200
+++ third_party/libjingle/BUILD.gn
@@ -11,7 +11,7 @@ config("jingle_unexported_configs") {
     "../../testing/gtest/include",
     "../../third_party",
     "../../third_party/libyuv/include",
-    "../../third_party/usrsctp/usrsctplib",
+ #   "../../third_party/usrsctp/usrsctplib",
   ]
 }
 
@@ -116,7 +116,7 @@ if (enable_webrtc) {
     deps = [
       ":libjingle",
       "//third_party/libsrtp",
-      "//third_party/usrsctp",
+ #     "//third_party/usrsctp",
       "//third_party/webrtc",
       "//third_party/webrtc/api:libjingle_peerconnection",
       "//third_party/webrtc/media:rtc_media",
