--- third_party/webrtc/media/BUILD.gn.orig	2016-11-10 22:03:06.000000000 +0200
+++ third_party/webrtc/media/BUILD.gn
@@ -114,8 +114,8 @@ source_set("rtc_media") {
     "engine/webrtcvoe.h",
     "engine/webrtcvoiceengine.cc",
     "engine/webrtcvoiceengine.h",
-    "sctp/sctpdataengine.cc",
-    "sctp/sctpdataengine.h",
+ #   "sctp/sctpdataengine.cc",
+ #   "sctp/sctpdataengine.h",
   ]
 
   configs += [
@@ -313,7 +313,7 @@ if (rtc_include_tests) {
       "engine/webrtcvideoframe_unittest.cc",
       "engine/webrtcvideoframefactory_unittest.cc",
       "engine/webrtcvoiceengine_unittest.cc",
-      "sctp/sctpdataengine_unittest.cc",
+ #     "sctp/sctpdataengine_unittest.cc",
     ]
 
     configs += [
