--- ui/views/BUILD.gn.intermediate	2017-01-26 11:32:16.000000000 +0200
+++ ui/views/BUILD.gn
@@ -589,12 +589,16 @@ component("views") {
           "widget/desktop_aura/x11_window_event_filter.cc",
           "widget/desktop_aura/x11_window_event_filter.h",
         ]
-        if (use_atk) {
+        if (use_atk || is_bsd) {
           sources += [
             "accessibility/native_view_accessibility_auralinux.cc",
             "accessibility/native_view_accessibility_auralinux.h",
           ]
-          configs += [ "//build/config/linux/atk" ]
+          if (use_atk) {
+            configs += [ "//build/config/linux/atk" ]
+          } else {
+            sources -= [ "accessibility/native_view_accessibility_auralinux.cc" ]
+          }
         }
       } else if (is_win) {
         sources += [
